kubernetes/03-accounts.yml
apiVersion: v1
kind: Namespace
metadata:
  name: m2a-alpha
  labels:
    name: m2a-alpha
