kubernetes/02-traefik.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.0
          args:
            - --api.insecure
            - --providers.kubernetesingress
            - --entryPoints.websecure.address=:443
            - --entryPoints.websecure.http.tls
            - --entryPoints.web.address=:80
          ports:
            - name: websecure
              containerPort: 443
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
