kubernetes/02-traefik-services.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service

spec:
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service

spec:
  type: LoadBalancer
  ports:
    - name: web
      targetPort: web
      port: 80
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 443
  selector:
    app: traefik
