kubernetes/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: common-gateway
spec:
  gatewayClassName: common-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
